[package]
name = "gatherthat"
version = "0.1.0"
edition = "2021"
authors = ["CapThat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
enigo = { git = "https://github.com/enigo-rs/enigo", rev = "7f96365cc29c6089c3c1a2194f9f84f881e8f675" }