[package]
name = "gatherthat"
version = "0.1.0"
edition = "2021"
authors = ["CapThat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
enigo = { git = "https://github.com/enigo-rs/enigo", rev = "7f96365cc29c6089c3c1a2194f9f84f881e8f675" }
once_cell = "1.17.0"
egui = "0.20.1"
eframe = "0.20.1"
regex = "1.7.1"